--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,3 @@
-/**
-* Template Name: eBusiness - v4.7.0
-* Template URL: https://bootstrapmade.com/ebusiness-bootstrap-corporate-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -98,7 +91,7 @@ a {
 }
 
 a:hover {
-  color: #3EC1D5;
+  color: #d5753e;
   text-decoration: none;
 }
 
@@ -126,7 +119,7 @@ body {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #3ec1d5;
+  background: #d5753e;
   width: 40px;
   height: 40px;
   transition: all 0.4s;
@@ -172,12 +165,12 @@ div#preloader {
 }
 
 ::-moz-selection {
-  background: #3EC1D5;
+  background: #d5753e;
   text-shadow: none;
 }
 
 ::selection {
-  background: #3EC1D5;
+  background: #d5753e;
   text-shadow: none;
 }
 
@@ -245,7 +238,7 @@ div#preloader {
   font-weight: bold;
 }
 #header .logo h1 span {
-  color: #3ec1d5;
+  color: #d5753e;
 }
 #header .logo h1 a, #header .logo h1 a:hover {
   color: #fff;
@@ -324,7 +317,7 @@ div#preloader {
   margin-left: 5px;
 }
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #3ec1d5;
+  color: #d5753e;
 }
 .navbar .dropdown ul {
   display: block;
@@ -353,7 +346,7 @@ div#preloader {
   font-size: 12px;
 }
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #3ec1d5;
+  color: #d5753e;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -435,7 +428,7 @@ div#preloader {
   color: #0d2529;
 }
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #3ec1d5;
+  color: #d5753e;
 }
 .navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
   margin: 15px;
@@ -461,7 +454,7 @@ div#preloader {
   font-size: 12px;
 }
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #3ec1d5;
+  color: #d5753e;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -591,11 +584,11 @@ div#preloader {
   transition: 0.5s;
   margin: 10px;
   color: #fff;
-  background: #3ec1d5;
+  background: #d5753e;
 }
 #hero .btn-get-started:hover {
   background: #fff;
-  color: #3ec1d5;
+  color: #d5753e;
 }
 
 /*--------------------------------------------------------------
@@ -616,7 +609,7 @@ div#preloader {
 }
 
 .single-well ul li i {
-  color: #3EC1D5;
+  color: #d5753e;
   margin-right: 5px;
   font-size: 18px;
 }
@@ -646,7 +639,7 @@ div#preloader {
 }
 
 .services-details:hover h4, .services-details:hover .services-icon {
-  color: #3EC1D5;
+  color: #d5753e;
 }
 
 .row.second-row {
@@ -749,7 +742,7 @@ div#preloader {
 }
 
 .email-news .email_button > button:hover {
-  background: #3EC1D5;
+  background: #d5753e;
   border: 1px solid #fff;
   color: #fff;
 }
@@ -759,7 +752,7 @@ div#preloader {
 }
 
 .team-left-icon ul li a:hover {
-  color: #3EC1D5;
+  color: #d5753e;
   background: #fff;
   border: 2px solid #fff;
 }
@@ -840,8 +833,8 @@ div#preloader {
 
 .team-social-icon ul li a:hover {
   color: #fff;
-  border: 1px solid #3EC1D5;
-  background: #3EC1D5;
+  border: 1px solid #d5753e;
+  background: #d5753e;
 }
 
 .team-content {
@@ -885,7 +878,7 @@ div#preloader {
 }
 
 .work-left-text {
-  background: #3EC1D5 none repeat scroll 0 0;
+  background: #d5753e none repeat scroll 0 0;
 }
 
 .work-right-text {
@@ -951,8 +944,8 @@ div#preloader {
   border: 1px solid #444;
 }
 #portfolio-flters li:hover, #portfolio-flters li.filter-active {
-  border-color: #3EC1D5;
-  background: #3EC1D5;
+  border-color: #d5753e;
+  background: #d5753e;
   color: #fff;
 }
 #portfolio-flters li:last-child {
@@ -1110,7 +1103,7 @@ div#preloader {
 }
 
 .pri_table_list li.check i {
-  color: #3EC1D5;
+  color: #d5753e;
   line-height: 0;
   font-size: 24px;
   margin-right: 5px;
@@ -1162,7 +1155,7 @@ div#preloader {
 }
 
 .saleon {
-  background: #3EC1D5 none repeat scroll 0 0;
+  background: #d5753e none repeat scroll 0 0;
   color: #fff;
   font-size: 13px;
   font-weight: 700;
@@ -1191,8 +1184,8 @@ div#preloader {
 }
 
 .active > button {
-  background: #3EC1D5 none repeat scroll 0 0;
-  border: 1px solid #3EC1D5;
+  background: #d5753e none repeat scroll 0 0;
+  border: 1px solid #d5753e;
   color: #fff;
   transition: 0.4s;
 }
@@ -1278,7 +1271,7 @@ div#preloader {
   opacity: 1;
 }
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #3ec1d5;
+  background-color: #d5753e;
 }
 @media (min-width: 992px) {
   .testimonials .testimonial-item p {
@@ -1290,7 +1283,7 @@ div#preloader {
 # Quote
 --------------------------------------------------------------*/
 .suscribe-area {
-  background: #3EC1D5 none repeat scroll 0 0;
+  background: #d5753e none repeat scroll 0 0;
   padding: 30px 0;
 }
 
@@ -1312,7 +1305,7 @@ div#preloader {
 .sus-btn {
   background: #fff none repeat scroll 0 0;
   border: 2px solid #fff;
-  color: #3EC1D5;
+  color: #d5753e;
   display: inline-block;
   font-size: 16px;
   font-weight: 700;
@@ -1324,7 +1317,7 @@ div#preloader {
 }
 
 .sus-btn:hover {
-  background: #3EC1D5 none repeat scroll 0 0;
+  background: #d5753e none repeat scroll 0 0;
   border: 2px solid #fff;
   color: #fff;
 }
@@ -1353,7 +1346,7 @@ div#preloader {
   line-height: 56px;
   border-radius: 50%;
   margin-bottom: 30px;
-  color: #3ec1d5;
+  color: #d5753e;
 }
 
 .single-icon p {
@@ -1417,7 +1410,7 @@ div#preloader {
   font-size: 14px;
 }
 .php-email-form input:focus, .php-email-form textarea:focus {
-  border-color: #3ec1d5;
+  border-color: #d5753e;
 }
 .php-email-form input {
   padding: 10px 15px;
@@ -1562,7 +1555,7 @@ div#preloader {
 }
 
 .single-blog .ready-btn:hover {
-  border: 1px solid #3EC1D5;
+  border: 1px solid #d5753e;
   color: #fff;
 }
 
@@ -1597,7 +1590,7 @@ div#preloader {
 }
 
 .search-option button:hover {
-  color: #3ec1d5;
+  color: #d5753e;
 }
 
 .left-blog h4 {
@@ -1655,8 +1648,8 @@ div#preloader {
 
 .ready-btn:hover {
   color: #fff;
-  background: #3EC1D5;
-  border: 1px solid #3EC1D5;
+  background: #d5753e;
+  border: 1px solid #d5753e;
   text-decoration: none;
 }
 
@@ -1674,7 +1667,7 @@ div#preloader {
 }
 
 .pst-content p a:hover, .left-blog ul li a:hover {
-  color: #3EC1D5;
+  color: #d5753e;
 }
 
 .blog-page .single-blog {
@@ -1743,7 +1736,7 @@ div#preloader {
 }
 
 .entry-meta span a:hover {
-  color: #3EC1D5;
+  color: #d5753e;
 }
 
 .post-information .entry-meta {
@@ -1765,7 +1758,7 @@ div#preloader {
 
 .entry-content blockquote {
   background: #fff none repeat scroll 0 0;
-  border-left: 5px solid #3EC1D5;
+  border-left: 5px solid #d5753e;
   font-size: 17.5px;
   font-style: italic;
   margin: 0 0 20px 40px;
@@ -1773,8 +1766,8 @@ div#preloader {
 }
 
 .pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
-  background-color: #3EC1D5;
-  border-color: #3EC1D5;
+  background-color: #d5753e;
+  border-color: #d5753e;
   color: #fff;
   cursor: default;
   z-index: 3;
@@ -1814,8 +1807,8 @@ div#preloader {
 }
 
 .sharing-icon a:hover {
-  color: #3EC1D5;
-  border: 1px solid #3EC1D5;
+  color: #d5753e;
+  border: 1px solid #d5753e;
 }
 
 .single-blog .author-avatar {
@@ -1940,7 +1933,7 @@ span.email-notes {
 
 .comment-respond input[type=submit] {
   background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-  border: 1px solid #3ec1d5;
+  border: 1px solid #d5753e;
   border-radius: 20px;
   box-shadow: none;
   color: #444;
@@ -1962,13 +1955,13 @@ span.email-notes {
 }
 
 .comments-content-wrap span a:hover {
-  color: #3EC1D5;
+  color: #d5753e;
 }
 
 .comment-respond input[type=submit]:hover {
-  border: 1px solid #3EC1D5;
+  border: 1px solid #d5753e;
   color: #fff;
-  background: #3EC1D5;
+  background: #d5753e;
 }
 
 .single-blog .blog-pagination {
@@ -2011,7 +2004,7 @@ span.email-notes {
 }
 
 .footer-logo h2 span {
-  color: #3ec1d5;
+  color: #d5753e;
 }
 
 .footer-icons ul li {
@@ -2049,7 +2042,7 @@ span.email-notes {
 }
 
 .footer-contacts p span {
-  color: #3EC1D5;
+  color: #d5753e;
   font-weight: 700;
 }
 
@@ -2063,8 +2056,8 @@ span.email-notes {
 }
 
 .popular-tag ul li a:hover, .footer-icons ul li a:hover {
-  background: #3EC1D5;
-  border: 1px solid #3EC1D5;
+  background: #d5753e;
+  border: 1px solid #d5753e;
   color: #fff;
 }
 
@@ -2090,7 +2083,7 @@ span.email-notes {
 
 .copyright-text a:hover {
   text-decoration: underline;
-  color: #3EC1D5;
+  color: #d5753e;
 }
 
 .copyright-text a {
@@ -2103,7 +2096,7 @@ span.email-notes {
 }
 
 .copyright a, .credits a {
-  color: #3EC1D5;
+  color: #d5753e;
 }
 
 .credits {
